--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="/public/app.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script><link rel="stylesheet" href="/public/style.css">
+    <script src="/public/app.js"></script>
     <title>Just Burgers</title>
 </head>
 <body>
+    <div class="container">
+    <div class="jumbotron">
+       <h1 class="text-center">My To-Eat-List</h1> 
+    </div>
     {{{body}}}
-    <form action="/api/new" method="POST">
-    <input type="text" name = "burgerName" placeholder="name of new burger">
-    <input type="submit">
-    </form>
+
+    </div>
 </body>
 </html>
