added a background image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,15 @@
 </head>
 <body>
     <div class="container">
-    <div class="jumbotron">
-       <h1 class="text-center">My To-Eat-List</h1> 
-    </div>
-    {{{body}}}
+        <div class="jumbotron">
+        <h1 class="text-center">My To-Eat-List</h1> 
+        </div>
+        {{{body}}}
 
     </div>
+    <div id="bg">
+        <img src="/public/burgers.jpg" alt="background">
+    </div>
+
 </body>
 </html>
